k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flynte-client-deployment
  labels:
    app: flynte-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flynte-client
  template:
    metadata:
      labels:
        app: flynte-client
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
