k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flynte-client-service
spec:
  selector:
    app.kubernetes.io/name: flynte-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
